Bugfixes and upgraded to java 17